tests/baselines/reference/indexSignatureTypeCheck.errors.txt
tests/cases/compiler/indexSignatureTypeCheck.ts(35,1): error TS2342: An index expression argument must be of type 'string', 'number', 'symbol, or 'any'.
tests/cases/compiler/indexSignatureTypeCheck.ts(38,8): error TS1019: An index signature parameter cannot have a question mark.
tests/cases/compiler/indexSignatureTypeCheck.ts(39,6): error TS1017: An index signature cannot have a rest parameter.
tests/cases/compiler/indexSignatureTypeCheck.ts(40,6): error TS1096: An index signature must have exactly one parameter.
tests/cases/compiler/indexSignatureTypeCheck.ts(41,6): error TS1096: An index signature must have exactly one parameter.
tests/cases/compiler/indexSignatureTypeCheck.ts(51,2): error TS2375: Duplicate number index signature.
tests/cases/compiler/indexSignatureTypeCheck.ts(56,2): error TS2375: Duplicate number index signature.
tests/cases/compiler/indexSignatureTypeCheck.ts(64,1): error TS2322: Type '{ [x: number]: string; }' is not assignable to type '{ [x: string]: string; }'.
  Index signature is missing in type '{ [x: number]: string; }'.
tests/cases/compiler/indexSignatureTypeCheck.ts(65,1): error TS2322: Type '{ [x: number]: number; }' is not assignable to type '{ [x: string]: string; }'.
  Index signature is missing in type '{ [x: number]: number; }'.
tests/cases/compiler/indexSignatureTypeCheck.ts(69,1): error TS2322: Type '{ [x: number]: number; }' is not assignable to type '{ [x: number]: string; }'.
  Index signatures are incompatible.
    Type 'number' is not assignable to type 'string'.
tests/cases/compiler/indexSignatureTypeCheck.ts(71,1): error TS2322: Type '{ [x: string]: string; }' is not assignable to type '{ [x: number]: number; }'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'number'.
tests/cases/compiler/indexSignatureTypeCheck.ts(72,1): error TS2322: Type '{ [x: number]: string; }' is not assignable to type '{ [x: number]: number; }'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/indexSignatureTypeCheck.ts (12 errors) ====
    interface IPropertySet {
        [index: string]: any;
    }
    
    var ps: IPropertySet = null;
    var index: any = "hello";
    ps[index] = 12;
    
    enum Val {
        a = 1,
        b = 2
    }
    
    type Val2 = Val;
    type Val3 = number;
     
    interface IEnum {
        [index: Val]: Val;
    }
    
    
    interface IEnum2 {
        [index: Val2]: Val2;
    }
    interface IEnum3 {
        [index: Val3]: Val3;
    }
    
    var pe: IEnum = null;
    
    pe[1] = null
    pe[3] = null
    pe[Val.b] = 5
    
    pe[true] = null
    ~~~~~~~~
!!! error TS2342: An index expression argument must be of type 'string', 'number', 'symbol, or 'any'.
    
    interface indexErrors {
        [p2?: string];
           ~
!!! error TS1019: An index signature parameter cannot have a question mark.
        [...p3: any[]];
         ~~~
!!! error TS1017: An index signature cannot have a rest parameter.
        [p4: string, p5?: string];
         ~~
!!! error TS1096: An index signature must have exactly one parameter.
        [p6: string, ...p7: any[]];
         ~~
!!! error TS1096: An index signature must have exactly one parameter.
    }
    
    enum E {
        A, B, C
    }
    
    
    interface DuplicateAccess {
    	[index: Val]: Val;
    	[index: Val2]: Val2;
    	~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    interface DuplicateAccess2 {
    	[index: number]: Val;
    	[index: Val3]: Val3;
    	~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    var x: { [x: string]: string }
    var y: { [x: number]: string }
    var z: { [x: E]: number }
    
    x = x;
    x = y;
    ~
!!! error TS2322: Type '{ [x: number]: string; }' is not assignable to type '{ [x: string]: string; }'.
!!! error TS2322:   Index signature is missing in type '{ [x: number]: string; }'.
    x = z;
    ~
!!! error TS2322: Type '{ [x: number]: number; }' is not assignable to type '{ [x: string]: string; }'.
!!! error TS2322:   Index signature is missing in type '{ [x: number]: number; }'.
    
    y = x;
    y = y;
    y = z;
    ~
!!! error TS2322: Type '{ [x: number]: number; }' is not assignable to type '{ [x: number]: string; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
    
    z = x;
    ~
!!! error TS2322: Type '{ [x: string]: string; }' is not assignable to type '{ [x: number]: number; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    z = y;
    ~
!!! error TS2322: Type '{ [x: number]: string; }' is not assignable to type '{ [x: number]: number; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    z = z;
    
    